# llama-box-api

./: .gitignore  README.md  alembic.ini  cset  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
alembic/: env.py
alembic/versions/: 392805ee004d_initial_migration.py  646532279be3_initial_commit.py
app/: database.py  main.py
app/api/v1/endpoints/: auth.py  consent.py  file.py  share.py  user.py  users.py
app/core/: auth.py  config.py  context.py  decorators.py  security.py
app/graphql/: errors.py  permissions.py  schema.py  types.py
app/graphql/mutations/: __init__.py  file.py  folder.py  link.py  permission.py
app/graphql/queries/: file.py  folder.py  link.py  permission.py
app/graphql/subscriptions/: test.py
app/models/: file.py  folder.py  link.py  permission.py  user.py
app/schemas/: auth.py  file.py  folder.py  link.py  permission.py  user.py
app/services/: __init__.py  copy.py  file.py  folder.py  link.py  move.py  permission.py  user.py
app/utils/: graphql.py  helpers.py  security.py
templates/: consent.html
tests/: conftest.py  test_app.py  test_auth.py  test_copy_service.py  test_file_model.py  test_folder_model.py  test_folder_service.py  test_graphql.py  test_link_model.py  test_move_service.py  test_permission_model.py  test_permission_service.py  test_user_model.py
tests/models/: test_users.py
